# glad2-gl

./: CMakeLists.txt  test_build.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
include/glad/: gl.h
